Revealed all file, settings and views + udpated defualt threshold to 0.15

--- a/index.html
+++ b/index.html
@@ -46,25 +46,23 @@
       <li class="nav-item dropdown">
         <a href="#" class="nav-link dropdown-toggle py-0" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">File</a>
         <div class="dropdown-menu">
-          <!--
           <a href="#" id="StashDataTab" class="dropdown-item" data-toggle="modal" data-target="#session-stash-modal">Stash</a>
           <a href="#" id="RecallDataTab" class="dropdown-item">Recall</a>
           <div class="dropdown-divider"></div>
           <a href="#" id="SaveDataTab" class="dropdown-item" data-toggle="modal" data-target="#session-save-modal">Save</a>
           <label class="dropdown-item" for="OpenTab">Open</label><input type="file" class="d-none" id="OpenTab">
           <div class="dropdown-divider"></div>
-          -->        
+       
           <a href="#" id="AddDataTab" class="dropdown-item">Add Data</a>
           <!--
           <a href="#" id="NewTab" class="dropdown-item">New</a>
           -->
         </div>
       </li>
-  <!--
       <li class="nav-item">
         <a href="#" id="SettingsTab" class="nav-link py-0" data-toggle="modal" data-target="#global-settings-modal">Settings</a>
       </li>
-  -->    
+  
       <li class="nav-item dropdown">
         <a href="#" class="nav-link dropdown-toggle py-0" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">View</a>
         <div class="dropdown-menu">
@@ -73,11 +71,11 @@
   -->        
           <a href="#" class="dropdown-item viewbutton" data-href="2d_network">2D Network</a>
           <a href="#" class="dropdown-item viewbutton" data-href="3d_network">3D Network</a>
-  <!--
+  
           <a href="#" class="dropdown-item viewbutton" data-href="histogram">Histogram</a>
-  -->
+ 
           <a href="#" class="dropdown-item viewbutton" data-href="table">Table</a>
-  <!--
+  
           <a href="#" class="dropdown-item viewbutton" data-href="aggregation">Aggregation</a>
           <a href="#" class="dropdown-item viewbutton" data-href="crosstab">CrossTab</a>
           <a href="#" class="dropdown-item viewbutton" data-href="bubbles">Bubbles</a>
@@ -85,13 +83,13 @@
           <a href="#" class="dropdown-item viewbutton" data-href="scatterplot">Scatterplot</a>
           <a href="#" class="dropdown-item viewbutton" data-href="waterfall">Waterfall</a>
           <a href="#" class="dropdown-item viewbutton" data-href="geo_map">Map</a>
-          <a href="#" class="dropdown-item viewbutton" data-href="choropleth">Choropleth</a>
+          <!-- <a href="#" class="dropdown-item viewbutton" data-href="choropleth">Choropleth</a> -->
           <a href="#" class="dropdown-item viewbutton" data-href="globe">Globe</a>
           <a href="#" class="dropdown-item viewbutton" data-href="gantt">Gantt</a>
           <a href="#" class="dropdown-item viewbutton" data-href="timeline">Epi Curve</a>
           <a href="#" class="dropdown-item viewbutton" data-href="heatmap">Heatmap</a>
           <a href="#" class="dropdown-item viewbutton" data-href="phylogenetic_tree">Phylogenetic Tree</a>
-  -->
+ 
           <a href="#" class="dropdown-item viewbutton" data-href="sequences">Sequences</a>
         </div>
       </li>
