update ga property

--- a/index.html
+++ b/index.html
@@ -650,14 +650,14 @@ performance of this software.</pre>
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
-  <script async src="https://googletagmanager.com/gtag/js?id=UA-116308624-1"></script>
+  <script async src="https://googletagmanager.com/gtag/js?id=G-PN74X7W8XM"></script>
   <script>
     if (window.location.hostname !== 'localhost' && window.location.hostname !== '127.0.0.1' && window.location.protocol !== 'https:') window.location.replace('https://' + window.location.hostname + window.location.pathname);
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'UA-116308624-1');
-    window.ga('create', 'UA-116308624-1', 'auto');
+    gtag('config', 'G-PN74X7W8XM');
+    window.ga('create', 'G-PN74X7W8XM', 'auto');
   </script>
   <script src="dist/bundle.primary.js" charset="utf-8"></script>
   <script src="src/common.js" async charset="utf-8"></script>
