--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@
       <li class="nav-item dropdown">
         <a href="#" class="nav-link dropdown-toggle py-0" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Help</a>
         <div class="dropdown-menu">
-          <a href="https://github.com/CDCgov/MicrobeTrace/wiki" id="HelpTab" target="_blank" class="dropdown-item">Help</a>
-          <a href="https://github.com/CDCgov/MicrobeTrace/issues/new" class="dropdown-item ifOnline" target="_blank" rel="noreferrer noopener">Report Bug</a>
+          <a href="https://github.com/CDCgov/HantaNet/wiki" id="HelpTab" target="_blank" class="dropdown-item">Help</a>
+          <a href="https://github.com/CDCgov/HantaNet/wiki/Using-HantaNet" id="UsingHantaNetTabe" target="_blank" class="dropdown-item">Using HantaNet</a>
+          <a href="https://github.com/CDCgov/HantaNet/issues/new" class="dropdown-item ifOnline" target="_blank" rel="noreferrer noopener">Report Bug</a>
           <div class="dropdown-divider ifOnline"></div>
           <a href="#" id="AboutTab" class="dropdown-item" data-toggle="modal" data-target="#about-modal">About</a>
         </div>
