--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <link rel="stylesheet" type="text/css" href="dist/bundle.primary.css">
   <link rel="stylesheet" type="text/css" href="src/main.css">
   <link rel="preload" as="script" href="dist/bundle.primary.js">
+  <link href="vendor/select2.min.css" rel="stylesheet" />
+  <script src="vendor/select2.min.js"></script>
   <link rel="preload" as="font" href="fonts/open-iconic.woff" crossorigin="anonymous">
   <script>
     (function (i, s, o, g, r, a, m) {
