--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
   <link rel="stylesheet" type="text/css" href="dist/bundle.primary.css">
   <link rel="stylesheet" type="text/css" href="src/main.css">
   <link rel="preload" as="script" href="dist/bundle.primary.js">
-  <link href="vendor/select2.min.css" rel="stylesheet" />
-  <script src="vendor/select2.min.js"></script>
   <link rel="preload" as="font" href="fonts/open-iconic.woff" crossorigin="anonymous">
   <script>
     (function (i, s, o, g, r, a, m) {
@@ -46,7 +44,7 @@
   <nav class="navbar fixed-top navbar-expand-xl navbar-light bg-light">
     <ul class="nav mr-auto"> 
       <li class="nav-item dropdown">
-        <a href="#" class="nav-link dropdown-toggle py-0" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">File</a>
+        <a href="#" class="nav-link dropdown-toggle py-0" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Files</a>
         <div class="dropdown-menu">
           <a href="#" id="StashDataTab" class="dropdown-item" data-toggle="modal" data-target="#session-stash-modal">Stash</a>
           <a href="#" id="RecallDataTab" class="dropdown-item">Recall</a>
