--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" type="text/css" href="src/main.css">
   <link rel="preload" as="script" href="dist/bundle.primary.js">
   <link rel="preload" as="font" href="fonts/open-iconic.woff" crossorigin="anonymous">
+  <script src="workers/lodash.js"></script>
   <script>
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
