Save Multiple Views Implementation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <link rel="stylesheet" type="text/css" href="src/main.css">
   <link rel="preload" as="script" href="dist/bundle.primary.js">
   <link rel="preload" as="font" href="fonts/open-iconic.woff" crossorigin="anonymous">
+  <script src="libraries/lodash.js"></script>
+  <script src="libraries/underscore-observe.js"></script>
   <script src="workers/lodash.js"></script>
   <script>
     (function (i, s, o, g, r, a, m) {
