added gtag directly after head

--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
   // </script>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-MJE9MEJL5T"></script>
+</head>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
+  console.log('print taging ga');
   gtag('config', 'G-MJE9MEJL5T');
 </script>
-</head>
 
 <body>
   <div class="d-none">
