--- a/index.html
+++ b/index.html
@@ -664,15 +664,15 @@ performance of this software.</pre>
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
-  <script async src="https://googletagmanager.com/gtag/js?id=UA-116308624-2"></script>
-  <script>
+  <!-- <script async src="https://googletagmanager.com/gtag/js?id=UA-116308624-2"></script> -->
+  <!-- <script>
     if (window.location.hostname !== 'localhost' && window.location.hostname !== '127.0.0.1' && window.location.protocol !== 'https:') window.location.replace('https://' + window.location.hostname + window.location.pathname);
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'UA-116308624-2');
     window.ga('create', 'UA-116308624-2', 'auto');
-  </script>
+  </script> -->
   <script src="dist/bundle.primary.js" charset="utf-8"></script>
   <script src="src/common.js" async charset="utf-8"></script>
   <script src="src/index.js" async charset="utf-8"></script>
