--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="application-name" content="MicrobeTrace">
-  <meta name="Description" content="MicrobeTrace is an interactive web application that renders existing data from high-risk contact networks in an easy-to-use Graphical User Interface (GUI). The network visualization can be customized according to supplemental data sources and mathematical inferences like the most probable transmission pathways. MicrobeTrace is a highly responsive, visual sequence analytics tool which can reduce the gap between data production and analytics and help you to discover, understand, and display relationships (links) between patients (nodes). MicrobeTrace can be deployed on laptops to locations without any Internet access, thereby reducing both the startup cost and analysis time and effort.">
+  <meta name="application-name" content="HantaNet">
+  <meta name="Description" content="HantaNet is an interactive web application that is focused on classifying Hantavirus sequences.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#f8f9fa">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="msapplication-TileColor" content="#ffc40d">
-  <meta name="apple-mobile-web-app-title" content="MicrobeTrace">
+  <meta name="apple-mobile-web-app-title" content="HantaNet">
   <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' googletagmanager.com *.google-analytics.com; connect-src 'self' googletagmanager.com *.google-analytics.com stats.g.doubleclick.net api.mapbox.com *.cdc.gov; img-src 'self' googletagmanager.com *.google-analytics.com *.doubleclick.net www.google.com api.mapbox.com data:; style-src 'self' 'unsafe-inline'; manifest-src 'self'; font-src 'self';">
-  <title>MicrobeTrace</title>
+  <title>HantaNet</title>
   <link rel="manifest" href="manifest.json">
-  <link rel="canonical" href="https://microbetrace.cdc.gov/MicrobeTrace/">
+  <link rel="canonical" href="https://cdcgov.github.io/HantaNet">
   <link rel="author" type="text/plain" href="humans.txt">
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
