--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
   <div class="d-none">
     <h1>Sorry!</h1>
-    <h4>MicrobeTrace requires CSS to run, but it looks like the appropriate CSS files weren't loaded for some reason.
+    <h4>HantaNet requires CSS to run, but it looks like the appropriate CSS files weren't loaded for some reason.
       Please try <a href="#" onclick="location.reload();">Refreshing the Page</a></h4>
   </div>
 
@@ -148,7 +148,7 @@
   </nav>
 
   <div id="ie-warning">
-    This application does not support Internet Explorer. To use MicrobeTrace, please switch to one of the following browsers:<br>
+    This application does not support Internet Explorer. To use HantaNet, please switch to one of the following browsers:<br>
     <a href='https://support.google.com/chrome/answer/95346'>Chrome</a>/
     <a href='https://www.opera.com/'>Opera</a>/
     <a href='https://www.mozilla.org/en-US/firefox/new/'>Firefox</a>
@@ -228,7 +228,7 @@ performance of this software.</pre>
     <noscript class="container-fluid">
       <div class="jumbotron">
         <h1>Sorry!</h1>
-        <p class="lead">MicrobeTrace requires Javascript to run. Please <a href="https://www.enable-javascript.com/">enable Javascript</a> and refresh MicrobeTrace.</p>
+        <p class="lead">HantaNet requires Javascript to run. Please <a href="https://www.enable-javascript.com/">enable Javascript</a> and refresh MicrobeTrace.</p>
       </div>
     </noscript>
     <div id="global-timeline-wrapper" style="display: none;">
