--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <meta name="theme-color" content="#f8f9fa">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="msapplication-TileColor" content="#ffc40d">
-  <meta name="apple-mobile-web-app-title" content="MicrobeTrace">
+  <meta name="apple-mobile-web-app-title" content="HantaNet">
   <meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval' googletagmanager.com *.googletagmanager.com *.google-analytics.com tiles.stadiamaps.com; connect-src 'self' googletagmanager.com *.googletagmanager.com *.google-analytics.com stats.g.doubleclick.net  stamen-tiles-a.a.ssl.fastly.net stamen-tiles-b.a.ssl.fastly.net stamen-tiles-c.a.ssl.fastly.net *.cdc.gov unpkg.com tiles.stadiamaps.com ; img-src 'self' googletagmanager.com *.googletagmanager.com *.google-analytics.com *.doubleclick.net www.google.com api.mapbox.com stamen-tiles-a.a.ssl.fastly.net stamen-tiles-b.a.ssl.fastly.net stamen-tiles-c.a.ssl.fastly.net a.tile.openstreetmap.org b.tile.openstreetmap.org c.tile.openstreetmap.org osmap.a.tile.mapcdn.net osmap.b.tile.mapcdn.net osmap.c.tile.mapcdn.net tiles.stadiamaps.com data:; style-src 'self' 'unsafe-inline'; manifest-src 'self'; font-src 'self';">
-  <title>MicrobeTrace</title>
+  <title>HantaNet</title>
   <link rel="manifest" href="manifest.json">
   <link rel="canonical" href="https://cdcgov.github.io/HantaNet/">
   <link rel="author" type="text/plain" href="humans.txt">
